SEO optimization: Target 'suryaa portfolio' search ranking #1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Primary Meta Tags -->
     <title>Suryaa S A - UI/UX Designer & Frontend Developer | Portfolio</title>
     <meta name="title" content="Suryaa S A - UI/UX Designer & Frontend Developer | Portfolio">
-    <meta name="description" content="Professional UI/UX Designer and Frontend Developer specializing in modern web design, user experience, HTML5, CSS3, JavaScript, and React. View my portfolio of creative digital solutions.">
-    <meta name="keywords" content="UI Designer, UX Designer, Frontend Developer, Web Designer, User Experience, User Interface, HTML5, CSS3, JavaScript, React, Figma, Adobe XD, Portfolio, Web Development, Responsive Design, Mobile Design">
+    <meta name="description" content="Suryaa Portfolio - Professional UI/UX Designer and Frontend Developer from Erode, Tamil Nadu. Specializing in modern web design, user experience, HTML5, CSS3, JavaScript, and React. View my creative digital solutions portfolio.">
+    <meta name="keywords" content="suryaa portfolio, suryaa s a portfolio, suryaa ui ux designer, suryaa frontend developer, suryaa web designer, UI Designer, UX Designer, Frontend Developer, Web Designer, User Experience, User Interface, HTML5, CSS3, JavaScript, React, Figma, Adobe XD, Portfolio, Web Development, Responsive Design, Mobile Design, Erode designer, Tamil Nadu developer">
     <meta name="author" content="Suryaa S A">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -121,7 +121,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Suryaa S A</h2>
+                <h2>Suryaa S A Portfolio</h2>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -490,6 +490,16 @@
 
         </div>
     </footer>
+
+    <!-- Hidden SEO Content for Search Engines -->
+    <div style="display: none;">
+        <h1>Suryaa Portfolio - UI/UX Designer & Frontend Developer</h1>
+        <p>Suryaa S A Portfolio showcases professional UI/UX design and frontend development work. Specializing in modern web design, user experience, HTML5, CSS3, JavaScript, and React development. Based in Erode, Tamil Nadu, India.</p>
+        <h2>Suryaa Portfolio Projects</h2>
+        <p>Manu Mate - Hotel menu app design, KayArr Redesign - Engineering website UI/UX, Juicy Website - Premium juice brand design, Social Media Dashboard, Portfolio Website, Mobile Banking App.</p>
+        <h3>Suryaa S A Skills</h3>
+        <p>UI Design, UX Design, Frontend Development, HTML5, CSS3, JavaScript, React, Figma, Adobe XD, Responsive Design, Mobile Design, Web Development, User Experience, User Interface Design.</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
