--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                     <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#education" class="nav-link">Education</a>
+                </li>
+                <li class="nav-item">
                     <a href="#tools" class="nav-link">Tools</a>
                 </li>
                 <li class="nav-item">
                     <a href="#projects" class="nav-link">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#education" class="nav-link">Education</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
@@ -233,6 +233,31 @@
         </div>
     </section>
 
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>B.E. Electronics and Communication Engineering</h3>
+                    <div class="about-text">
+                        <p>M Kumarasamy College of Engineering, Karur</p>
+                        <p>July 2019 - March 2023</p>
+                        <p>Focused on Electronics, PCB Design, and Networks.</p>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>UI/UX & Design Thinking</h3>
+                    <div class="about-text">
+                        <p>IDM Techpark, Erode</p>
+                        <p>April 2025 - Oct 2025</p>
+                        <p>Hands-on training in modern frontend frameworks, UI/UX, and deployment.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Tools Section -->
     <section id="tools" class="skills">
         <div class="container">
@@ -280,7 +305,7 @@
                     <div class="project-image">
                         <img src="images/project1.png" alt="Project 1">
                         <div class="project-overlay">
-                            <a href="https://ecommerce-demo.netlify.app" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://www.figma.com/proto/0wjycbTwstfeRiCS7mCgWD/MenuMate?page-id=68%3A725&node-id=286-3110&viewport=396%2C-763%2C0.17&t=nZbFsgDxolYgX0gf-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=286%3A3103" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                           <!--  <a href="https://github.com/your-username/ecommerce-platform" class="project-link" target="_blank"><i class="fab fa-github"></i></a> -->
                             <a href="https://behance.net/your-username/ecommerce-design" class="project-link" target="_blank"><i class="fab fa-behance"></i></a>
                         </div>
@@ -303,7 +328,7 @@
                     <div class="project-image">
                         <img src="images/project2.png" alt="Project 2">
                         <div class="project-overlay">
-                            <a href="https://taskmanager-demo.vercel.app" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://www.figma.com/proto/cYZfU0XMv1VCWdaRelrwET/KayArr-design?page-id=0%3A1&node-id=27-49&viewport=-419%2C-675%2C0.33&t=5XekZfJlyg7GQIqk-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=27%3A49" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                            <!-- <a href="https://github.com/your-username/task-manager" class="project-link" target="_blank"><i class="fab fa-github"></i></a> -->
                            <!-- <a href="https://behance.net/your-username/task-manager-design" class="project-link" target="_blank"><i class="fab fa-behance"></i></a> -->
                         </div>
@@ -325,7 +350,7 @@
                     <div class="project-image">
                         <img src="images/project3.png" alt="Project 3">
                         <div class="project-overlay">
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://www.figma.com/proto/YWc2YmlY0gpfJPy2mE1nvk/Untitled?page-id=36%3A215&node-id=39-580&viewport=-695%2C-194%2C0.19&t=XeNdRwBoRC2CqHFW-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=39%3A580" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                           <!--  <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a> -->
                         </div>
@@ -345,94 +370,74 @@
 
                 <div class="project-card hidden-project">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=500&h=300&fit=crop" alt="Project 4">
+                        <img src="images/project4.png" alt="Project 4">
                         <div class="project-overlay">
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a>
+                            <a href="https://dineshkumar-k-portfolio.netlify.app/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Suryaa033/dineshkumar-portfolio" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
+                           <!-- <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a> -->
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Social Media Dashboard</h3>
-                        <p>A comprehensive social media management platform with analytics, scheduling, and content creation tools for businesses.</p>
+                        <h3>Dineshkumar Portfolio</h3>
+                        <p>A Responsive Portfolio Website for a digital marketer. They need clear Ul and UX design portfolio.</p>
                         <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
-                            <span>Chart.js</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>GitHub</span>
+                            <span>Meta tags</span>
+                            <span>Netlify</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card hidden-project">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=500&h=300&fit=crop" alt="Project 5">
+                        <img src="images/project5.png" alt="Project 5">
                         <div class="project-overlay">
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a>
+                            <a href="https://suryaa-s-a-portfolio.netlify.app/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Suryaa033/suryaa-s-a-portfolio" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
+                           <!-- <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a> -->
                         </div>
                     </div>
                     <div class="project-content">
                         <h3>Portfolio Website</h3>
-                        <p>A modern, responsive portfolio website with smooth animations, dark mode, and interactive elements built with vanilla JavaScript.</p>
+                        <p>A modern, responsive portfolio website with smooth animations and interactive elements built with JavaScript.</p>
                         <div class="project-tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
                             <span>JavaScript</span>
-                            <span>GSAP</span>
+                            <span>Netlify</span>
+                            <span>GitHub</span>
+                            <span>SEO</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card hidden-project">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=500&h=300&fit=crop" alt="Project 6">
+                        <img src="images/project6.png" alt="Project 6">
                         <div class="project-overlay">
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a>
+                            <a href="https://trip-tribe-websitesoon.netlify.app/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Suryaa033/java-script-30projects/tree/main/website%20soon" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
+                           <!-- <a href="https://your-project-demo.com" class="project-link" target="_blank"><i class="fab fa-behance"></i></a> -->
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Mobile Banking App</h3>
-                        <p>A secure mobile banking application with biometric authentication, transaction history, and real-time notifications.</p>
+                        <h3>Website Soon</h3>
+                        <p>A website soon page with smooth animations and interactive elements built with JavaScript.</p>
                         <div class="project-tech">
-                            <span>React Native</span>
-                            <span>Node.js</span>
-                            <span>PostgreSQL</span>
-                            <span>JWT</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>Netlify</span>
+                            <span>GitHub</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="projects-actions">
                 <a href="#" class="btn btn-primary" id="toggleProjects">View All Projects</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Education Section -->
-    <section id="education" class="education">
-        <div class="container">
-            <h2 class="section-title">Education</h2>
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <h3>B.E. Electronics and Communication Engineering</h3>
-                    <div class="about-text">
-                        <p>M Kumarasamy College of Engineering, Karur</p>
-                        <p>July 2019 - March 2023</p>
-                        <p>Focused on Electronics, PCB Design, and Networks.</p>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3>UI/UX & Design Thinking</h3>
-                    <div class="about-text">
-                        <p>IDM Techpark, Erode</p>
-                        <p>April 2025 - Oct 2025</p>
-                        <p>Hands-on training in modern frontend frameworks, UI/UX, and deployment.</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
